# MetaSAT

./: .clang-format  CMakeLists.txt  CNF.cppm  CNF.h  testgen.py
common/: CMakeLists.txt  CNF.cppm
common/testgen/: CMakeLists.txt  testgen.py
sat_comptime/: CMakeLists.txt  ct_sat.cpp  tests.h
sat_hybrid/: CMakeLists.txt  SAT_hyb.cppm  tests.cpp  tests.h
sat_runtime/: CMakeLists.txt  SAT_rt.cppm  main.cpp  tests.cpp  tests.h
